# asgard

./: .dockerignore  .flake8  .gitignore  .pdm-python  .pdm.toml  LICENSE  Makefile  README.md  docker-compose.yml  pdm.toml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: actions.yaml
api/: Dockerfile  api.py  main.py  requirements-api.txt  utils.py
app/: Dockerfile  app.py  main.py  requirements-app.txt
asgard/callbacks/: callbacks.py
asgard/configs/wandb/sweeps/: bert.yaml  distilbert.yaml  rnn.yaml
asgard/dataset/: create_dataset.py  loader.py  main.py  preprocessing.py
asgard/dataset/toolbox/: loader.py  model_selection.py  preprocessing.py
asgard/metrics/: metrics.py
asgard/models/bert/: bert.py
asgard/models/rnn/: logging.py  rnn.py  weights.py
asgard/utils/: data_loader.py  logging.py  monitor.py
data/: .gitignore  csv.dvc  tf.dvc
notebooks/: data_collect.ipynb  data_preparation.ipynb  fbeta_green.ipynb  inference_cba2022.ipynb  load_model.ipynb  training.ipynb  trees_carbon_sequester.csv
scripts/: train_bert.py  train_rnn.py
sdg_classifier/dataset/: model_selection.py
sdg_classifier/models/rnn/: logging.py  rnn.py  weights.py
sdg_classifier/preparation/: dataset.py  main.py  model_selection.py  preprocessing.py
sdg_classifier/utils/: monitor.py
storage/: datasets.dvc
tests/unit/: test_loader.py  test_metrics.py  test_model_selection.py  test_preprocessing.py
tests/unit/test_data/dataset_build/: test_data_build.csv
tests/unit/test_data/raw/: test_data_1.csv  test_data_2.csv
